--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,7 @@ services:
         - "MYSQL_ROOT_USERNAME=root"
         - "MYSQL_ROOT_PASSWORD=secret"
         - "MYSQL_DATABASE=db"
+      volumes:
+        - ./deploy/init:/docker-entrypoint-initdb.d
       ports:
           - "33061:3306"
